wildfly (with full build) requires more perm-gen space
I'm not sure exactly why, but the new arquillian tests cause out of perm-gen space errors with the default setting.
Perhaps the deployments aren't getting fully garbaged collected. Hard to say whether that's true or what might cause this without some profiling.

Also, bump the wildfly-maven-plugin version for good measure.